# QT_1V1_game

./: 1v1.pro  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  ressources.qrc  settings.cpp  settings.h  settings.ui
